--- a/starter/03-colors/css/styles.css
+++ b/starter/03-colors/css/styles.css
@@ -3,5 +3,5 @@ body {
 }
 
 article {
-  background-color: rgb(255, 0, 0, 20%); /* 20% opavity */
+  background-color: rgb(255, 0, 0, 20%); /* 20% opacity */
 }
